// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField component supports filled text fields 1`] = `
<label
  className="mdc-text-field mdc-text-field--no-label mdc-text-field--filled"
>
  <span
    className="mdc-text-field__ripple"
  />
  <input
    className="mdc-text-field__input"
    disabled={false}
    required={false}
    type="text"
  />
  <span
    className="mdc-line-ripple"
  />
</label>
`;

exports[`TextField component supports filled text fields 2`] = `
<label
  className="mdc-text-field mdc-text-field--disabled mdc-text-field--filled"
>
  <span
    className="mdc-text-field__ripple"
  />
  <input
    className="mdc-text-field__input"
    disabled={true}
    placeholder="bar"
    required={false}
    type="text"
  />
  <span
    className="mdc-floating-label"
  >
    foo
  </span>
  <span
    className="mdc-line-ripple"
  />
</label>
`;

exports[`TextField component supports filled text fields 3`] = `
<label
  className="mdc-text-field mdc-text-field--label-floating mdc-text-field--filled qux"
>
  <span
    className="mdc-text-field__ripple"
  />
  <input
    aria-labelledby="bar-label"
    className="mdc-text-field__input"
    defaultValue="baz"
    disabled={false}
    id="bar"
    name="bar"
    pattern="[a-z]*"
    required={false}
    type="text"
  />
  <span
    className="mdc-floating-label mdc-floating-label--float-above"
    id="bar-label"
  >
    foo
  </span>
  <span
    className="mdc-line-ripple"
  />
</label>
`;

exports[`TextField component supports filled text fields 4`] = `
<label
  className="mdc-text-field mdc-text-field--label-floating mdc-text-field--filled"
>
  <span
    className="mdc-text-field__ripple"
  />
  <input
    aria-labelledby="bar-label"
    className="mdc-text-field__input"
    defaultValue="baz"
    disabled={false}
    id="bar"
    name="bar"
    required={false}
    type="text"
  />
  <span
    className="mdc-floating-label mdc-floating-label--float-above"
    id="bar-label"
  >
    foo
  </span>
  <span
    className="mdc-line-ripple"
  />
</label>
`;

exports[`TextField component supports filled text fields 5`] = `
Array [
  <label
    className="mdc-text-field mdc-text-field--no-label mdc-text-field--filled"
  >
    <span
      className="mdc-text-field__ripple"
    />
    <input
      className="mdc-text-field__input"
      disabled={false}
      required={false}
      type="text"
    />
    <span
      className="mdc-line-ripple"
    />
  </label>,
  <div
    className="mdc-text-field-helper-line"
  >
    <div
      aria-hidden="true"
      className="mdc-text-field-helper-text"
    >
      qux
    </div>
  </div>,
]
`;

exports[`TextField component supports filled text fields 6`] = `
Array [
  <label
    className="mdc-text-field mdc-text-field--disabled mdc-text-field--filled"
  >
    <span
      className="mdc-text-field__ripple"
    />
    <input
      className="mdc-text-field__input"
      disabled={true}
      placeholder="bar"
      required={false}
      type="text"
    />
    <span
      className="mdc-floating-label"
    >
      foo
    </span>
    <span
      className="mdc-line-ripple"
    />
  </label>,
  <div
    className="mdc-text-field-helper-line"
  >
    <div
      aria-hidden="true"
      className="mdc-text-field-helper-text mdc-text-field-helper-text--persistent"
    >
      qux
    </div>
  </div>,
]
`;

exports[`TextField component supports filled text fields 7`] = `
Array [
  <label
    className="mdc-text-field mdc-text-field--label-floating mdc-text-field--filled qux"
  >
    <span
      className="mdc-text-field__ripple"
    />
    <input
      aria-controls="bar-helper"
      aria-describedby="bar-helper"
      aria-labelledby="bar-label"
      className="mdc-text-field__input"
      defaultValue="baz"
      disabled={false}
      id="bar"
      name="bar"
      pattern="[a-z]*"
      required={false}
      type="text"
    />
    <span
      className="mdc-floating-label mdc-floating-label--float-above"
      id="bar-label"
    >
      foo
    </span>
    <span
      className="mdc-line-ripple"
    />
  </label>,
  <div
    className="mdc-text-field-helper-line"
  >
    <div
      aria-hidden="true"
      className="mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg"
      id="bar-helper"
    >
      qux
    </div>
  </div>,
]
`;

exports[`TextField component supports outlined text fields 1`] = `
<label
  className="mdc-text-field mdc-text-field--no-label mdc-text-field--outlined"
>
  <input
    className="mdc-text-field__input"
    disabled={false}
    required={false}
    type="text"
  />
  <span
    className="mdc-notched-outline"
  >
    <span
      className="mdc-notched-outline__leading"
    />
    <span
      className="mdc-notched-outline__trailing"
    />
  </span>
</label>
`;

exports[`TextField component supports outlined text fields 2`] = `
<label
  className="mdc-text-field mdc-text-field--disabled mdc-text-field--outlined"
>
  <input
    className="mdc-text-field__input"
    disabled={true}
    placeholder="bar"
    required={false}
    type="text"
  />
  <span
    className="mdc-notched-outline"
  >
    <span
      className="mdc-notched-outline__leading"
    />
    <span
      className="mdc-notched-outline__notch"
    >
      <span
        className="mdc-floating-label"
      >
        foo
      </span>
    </span>
    <span
      className="mdc-notched-outline__trailing"
    />
  </span>
</label>
`;

exports[`TextField component supports outlined text fields 3`] = `
<label
  className="mdc-text-field mdc-text-field--label-floating mdc-text-field--outlined qux"
>
  <input
    aria-labelledby="bar-label"
    className="mdc-text-field__input"
    defaultValue="baz"
    disabled={false}
    id="bar"
    name="bar"
    pattern="[a-z]*"
    required={false}
    type="text"
  />
  <span
    className="mdc-notched-outline"
  >
    <span
      className="mdc-notched-outline__leading"
    />
    <span
      className="mdc-notched-outline__notch"
    >
      <span
        className="mdc-floating-label mdc-floating-label--float-above"
        id="bar-label"
      >
        foo
      </span>
    </span>
    <span
      className="mdc-notched-outline__trailing"
    />
  </span>
</label>
`;

exports[`TextField component supports outlined text fields 4`] = `
Array [
  <label
    className="mdc-text-field mdc-text-field--no-label mdc-text-field--outlined"
  >
    <input
      className="mdc-text-field__input"
      disabled={false}
      required={false}
      type="text"
    />
    <span
      className="mdc-notched-outline"
    >
      <span
        className="mdc-notched-outline__leading"
      />
      <span
        className="mdc-notched-outline__trailing"
      />
    </span>
  </label>,
  <div
    className="mdc-text-field-helper-line"
  >
    <div
      aria-hidden="true"
      className="mdc-text-field-helper-text"
    >
      qux
    </div>
  </div>,
]
`;

exports[`TextField component supports outlined text fields 5`] = `
Array [
  <label
    className="mdc-text-field mdc-text-field--disabled mdc-text-field--outlined"
  >
    <input
      className="mdc-text-field__input"
      disabled={true}
      placeholder="bar"
      required={false}
      type="text"
    />
    <span
      className="mdc-notched-outline"
    >
      <span
        className="mdc-notched-outline__leading"
      />
      <span
        className="mdc-notched-outline__notch"
      >
        <span
          className="mdc-floating-label"
        >
          foo
        </span>
      </span>
      <span
        className="mdc-notched-outline__trailing"
      />
    </span>
  </label>,
  <div
    className="mdc-text-field-helper-line"
  >
    <div
      aria-hidden="true"
      className="mdc-text-field-helper-text mdc-text-field-helper-text--persistent"
    >
      qux
    </div>
  </div>,
]
`;

exports[`TextField component supports outlined text fields 6`] = `
Array [
  <label
    className="mdc-text-field mdc-text-field--label-floating mdc-text-field--outlined qux"
  >
    <input
      aria-controls="bar-helper"
      aria-describedby="bar-helper"
      aria-labelledby="bar-label"
      className="mdc-text-field__input"
      defaultValue="baz"
      disabled={false}
      id="bar"
      name="bar"
      pattern="[a-z]*"
      required={false}
      type="text"
    />
    <span
      className="mdc-notched-outline"
    >
      <span
        className="mdc-notched-outline__leading"
      />
      <span
        className="mdc-notched-outline__notch"
      >
        <span
          className="mdc-floating-label mdc-floating-label--float-above"
          id="bar-label"
        >
          foo
        </span>
      </span>
      <span
        className="mdc-notched-outline__trailing"
      />
    </span>
  </label>,
  <div
    className="mdc-text-field-helper-line"
  >
    <div
      aria-hidden="true"
      className="mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg"
      id="bar-helper"
    >
      qux
    </div>
  </div>,
]
`;

exports[`TextField component supports outlined textareas 1`] = `
<label
  className="mdc-text-field mdc-text-field--no-label mdc-text-field--outlined mdc-text-field--textarea"
>
  <span
    className="mdc-text-field__resizer"
  >
    <textarea
      className="mdc-text-field__input"
      cols={32}
      disabled={false}
      required={false}
      rows={4}
    />
  </span>
  <span
    className="mdc-notched-outline"
  >
    <span
      className="mdc-notched-outline__leading"
    />
    <span
      className="mdc-notched-outline__trailing"
    />
  </span>
</label>
`;

exports[`TextField component supports outlined textareas 2`] = `
<label
  className="mdc-text-field mdc-text-field--no-label mdc-text-field--disabled mdc-text-field--outlined mdc-text-field--textarea"
>
  <span
    className="mdc-text-field__resizer"
  >
    <textarea
      className="mdc-text-field__input"
      cols={32}
      disabled={true}
      placeholder="bar"
      required={false}
      rows={4}
    />
  </span>
  <span
    className="mdc-notched-outline"
  >
    <span
      className="mdc-notched-outline__leading"
    />
    <span
      className="mdc-notched-outline__trailing"
    />
  </span>
</label>
`;

exports[`TextField component supports outlined textareas 3`] = `
<label
  className="mdc-text-field mdc-text-field--no-label mdc-text-field--label-floating mdc-text-field--outlined mdc-text-field--textarea qux"
>
  <span
    className="mdc-text-field__resizer"
  >
    <textarea
      className="mdc-text-field__input"
      cols={40}
      defaultValue="baz"
      disabled={false}
      id="bar"
      name="bar"
      pattern="[a-z]*"
      required={false}
      rows={6}
    />
  </span>
  <span
    className="mdc-notched-outline"
  >
    <span
      className="mdc-notched-outline__leading"
    />
    <span
      className="mdc-notched-outline__trailing"
    />
  </span>
</label>
`;

exports[`TextField component supports outlined textareas 4`] = `
Array [
  <label
    className="mdc-text-field mdc-text-field--no-label mdc-text-field--outlined mdc-text-field--textarea"
  >
    <span
      className="mdc-text-field__resizer"
    >
      <textarea
        className="mdc-text-field__input"
        cols={32}
        disabled={false}
        required={false}
        rows={4}
      />
    </span>
    <span
      className="mdc-notched-outline"
    >
      <span
        className="mdc-notched-outline__leading"
      />
      <span
        className="mdc-notched-outline__trailing"
      />
    </span>
  </label>,
  <div
    className="mdc-text-field-helper-line"
  >
    <div
      aria-hidden="true"
      className="mdc-text-field-helper-text"
    >
      qux
    </div>
  </div>,
]
`;

exports[`TextField component supports outlined textareas 5`] = `
Array [
  <label
    className="mdc-text-field mdc-text-field--disabled mdc-text-field--outlined mdc-text-field--textarea"
  >
    <span
      className="mdc-text-field__resizer"
    >
      <textarea
        className="mdc-text-field__input"
        cols={32}
        disabled={true}
        placeholder="bar"
        required={false}
        rows={4}
      />
    </span>
    <span
      className="mdc-notched-outline"
    >
      <span
        className="mdc-notched-outline__leading"
      />
      <span
        className="mdc-notched-outline__trailing"
      />
    </span>
  </label>,
  <div
    className="mdc-text-field-helper-line"
  >
    <div
      aria-hidden="true"
      className="mdc-text-field-helper-text mdc-text-field-helper-text--persistent"
    >
      qux
    </div>
  </div>,
]
`;

exports[`TextField component supports outlined textareas 6`] = `
Array [
  <label
    className="mdc-text-field mdc-text-field--label-floating mdc-text-field--outlined mdc-text-field--textarea qux"
  >
    <span
      className="mdc-text-field__resizer"
    >
      <textarea
        aria-controls="bar-helper"
        aria-describedby="bar-helper"
        aria-labelledby="bar-label"
        className="mdc-text-field__input"
        cols={32}
        defaultValue="baz"
        disabled={false}
        id="bar"
        name="bar"
        pattern="[a-z]*"
        required={false}
        rows={4}
      />
    </span>
    <span
      className="mdc-notched-outline"
    >
      <span
        className="mdc-notched-outline__leading"
      />
      <span
        className="mdc-notched-outline__trailing"
      />
    </span>
  </label>,
  <div
    className="mdc-text-field-helper-line"
  >
    <div
      aria-hidden="true"
      className="mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg"
      id="bar-helper"
    >
      qux
    </div>
  </div>,
]
`;
